--- a/viblo-202005.md
+++ b/viblo-202005.md
@@ -149,6 +149,46 @@ const UPDATED_AT = 'updated_at'; // Đúng, thậm chí những cái tên này c
 public $timestamps = false; // hoặc thậm chí còn không được sử dụng
 ```
 
+## 6. Tìm nhiều bản ghi
+
+Mọi người đều biết phương thức `find()` đúng không?
+
+```
+$user = User::find(1);
+```
+
+Mình rất ngạc nhiên khi có rất ít người biết rằng nó có thể chấp nhận nhiều ID dưới dạng một mảng:
+
+```php
+$users = User::find([1,2,3]);
+```
+
+## 7. WhereX
+
+Chúng ta thường sử dụng where thế này:
+
+```php
+$users = User::where('approved', 1)->get();
+```
+
+Nhưng đây là 1 cách khác:
+
+```php
+$users = User::whereApproved(1)->get(); 
+```
+
+Đúng vậy, bạn có thể thay đổi tên của bất kỳ trường nào và nối nó thành một hậu tố (suffix) sau where, và nó sẽ hoạt động bằng magic.
+
+
+Ngoài ra, có một số method được định nghĩa trước trong Eloquent, liên quan đến ngày / giờ:
+
+```php
+User::whereDate('created_at', date('Y-m-d'));
+User::whereDay('created_at', date('d'));
+User::whereMonth('created_at', date('m'));
+User::whereYear('created_at', date('Y'));
+```
+
 # Kết luận
 
 Cùng chờ tiếp phần 2 ở bài tiếp theo của mình bạn nhé.
