--- a/viblo-202007.md
+++ b/viblo-202007.md
@@ -8,6 +8,34 @@ Eloquent ORM có vẻ như là một cơ chế đơn giản, nhưng sâu bên tr
 Bạn có thể xem lại phần 1 của serie này tại đây: https://github.com/mrduong92/Cordova/blob/master/viblo-202005.md
 Bạn có thể xem lại phần 2 của serie này tại đây: https://github.com/mrduong92/Cordova/blob/master/viblo-202006.md
 
+## 13. Raw query methods
+Đôi khi chúng ta cần thêm các truy vấn thô (raw query) vào các câu lệnh Eloquent. May mắn thay, có chức năng cho điều đó.
+
+```php
+// whereRaw
+$orders = DB::table('orders')
+    ->whereRaw('price > IF(state = "TX", ?, 100)', [200])
+    ->get();
+
+// havingRaw
+Product::groupBy('category_id')->havingRaw('COUNT(*) > 1')->get();
+
+// orderByRaw
+User::where('created_at', '>', '2016-01-01')
+  ->orderByRaw('(updated_at - created_at) desc')
+  ->get();
+```
+
+## 14. Mở rộng: tạo bản sao của một row
+
+ Không cần giải thích nhiều, cách tốt nhất ở đây để tạo một bản sao của cơ sở dữ liệu:
+
+```php
+$task = Tasks::find(1);
+$newTask = $task->replicate();
+$newTask->save();
+```
+
 ## 15. `Chunk()` đối với dữ liệu lớn.
 
 Không hẳn là đã liên quan đến Eloquent, nó là sự mở rộng về Collection, nhưng vẫn mạnh mẽ để xử lý dữ liệu lớn hơn, bạn có thể chia chúng thành từng mảnh.
