--- a/viblo-202007.md
+++ b/viblo-202007.md
@@ -8,6 +8,89 @@ Eloquent ORM có vẻ như là một cơ chế đơn giản, nhưng sâu bên tr
 Bạn có thể xem lại phần 1 của serie này tại đây: https://github.com/mrduong92/Cordova/blob/master/viblo-202005.md
 Bạn có thể xem lại phần 2 của serie này tại đây: https://github.com/mrduong92/Cordova/blob/master/viblo-202006.md
 
+Phần này mình sẽ tua lại 1 vài thủ thuật của phần 2 quan trọng để các bạn không bị miss nhé!
+
+## 10. BelongsTo Default Models
+
+Khi bạn có post của author và sau đó là code blade:
+
+```php
+{{ $post->author->name }}
+```
+
+Nhưng điều gì sẽ xảy ra nếu author bị xóa, hoặc không được set vì một số lý do? Bạn sẽ gặp một lỗi  `“property of non-object”`.
+
+Tất nhiên, bạn có thể ngăn chặn nó như thế này:
+
+```php
+{{ $post->author->name ?? '' }}
+```
+
+Nhưng bạn có thể làm điều đó ở cấp độ mối quan hệ Eloquent:
+
+```php
+public function author()
+{
+    return $this->belongsTo('App\Author')->withDefault();
+}
+```
+
+Trong ví dụ này, mối quan hệ `author()` sẽ trả về model `App\Author` rỗng nếu không có author nào liên kết với post.
+
+Hơn nữa, chúng ta có thể gán các giá trị thuộc tính mặc định cho model mặc định đó.
+
+```php
+public function author()
+{
+    return $this->belongsTo('App\Author')->withDefault([
+        'name' => 'Guest Author'
+    ]);
+}
+```
+
+## 11. Order by Mutator
+
+Hãy tưởng tượng bạn có điều này:
+
+```php
+function getFullNameAttribute()
+{
+  return $this->attributes['first_name'] . ' ' . $this->attributes['last_name'];
+}
+```
+
+Bây giờ, bạn muốn sắp xếp theo full_name đó? Công việc này đã hoàn thành.
+
+```php
+$clients = Client::orderBy('full_name')->get(); // không hoạt động
+```
+
+Giải pháp khá đơn giản. Chúng ta cần phải orderby kết quả sau khi get được chúng.
+
+```php
+$clients = Client::get()->sortBy('full_name'); // hoạt động!
+```
+
+Lưu ý rằng tên hàm là khác nhau - nó không phải là orderBy, nó là sortBy.
+
+## 12. Order mặc định trong global scope
+
+Điều gì xảy ra nếu bạn muốn `User::all()` luôn được sắp xếp theo trường `name`? Bạn có thể chỉ định một global scope. Hãy trở về phương thức `boot()` mà chúng ta đã đề cập ở trên.
+
+```php
+protected static function boot()
+{
+    parent::boot();
+
+    // Order by name ASC
+    static::addGlobalScope('order', function (Builder $builder) {
+        $builder->orderBy('name', 'asc');
+    });
+}
+```
+
+Đọc thêm về Query Scopes tại đây: https://laravel.com/docs/5.6/eloquent#query-scopes.
+
 ## 13. Raw query methods
 Đôi khi chúng ta cần thêm các truy vấn thô (raw query) vào các câu lệnh Eloquent. May mắn thay, có chức năng cho điều đó.
 
