--- a/viblo-202010.md
+++ b/viblo-202010.md
@@ -4,17 +4,17 @@
 ## Giới thiệu
 ![](https://i0.wp.com/www.laraveltip.com/wp-content/uploads/2020/04/%C2%A1Cuidado-con-tu-archivo-.env-No-olvides-hacer-esto.png?w=1280&ssl=1)
 
-Juan Cuartas là thành viên của nhóm Let's Talk about Laravel, người đã thực hiện bài viết thú vị này về cách ngăn các biến môi trường của dự án Laravel của chúng tôi hiển thị và tôi sẽ đưa nó lên để xuất bản cho tất cả các bạn. Nếu bạn thích bài viết, đừng quên để lại lời nhắn cảm ơn Juan vì những đóng góp của anh ấy. Bây giờ có, đến mẹo!
+Một vài ngày trước khi tư vấn cho một dự án trong Laravel 5.8, hiện đã được release, tôi thấy rằng nó đã bật debug trong file `.env` `APP_DEBUG = true`, vấn đề là khi trường hợp này xảy ra; Tất cả thông tin trong file này được hiển thị cho người dùng hoặc bất kỳ ai truy cập trang web như: `DB_DATABASE`, `DB_USERNAME`, `DB_PASSWORD` và những thông tin khác.
 
-Một vài ngày trước khi tư vấn cho một dự án trong Laravel 5.8, hiện đã được sản xuất, tôi thấy rằng nó đã bật gỡ lỗi trong file .env APP_DEBUG = true, vấn đề là khi trường hợp này xảy ra; Tất cả thông tin trong file này được hiển thị cho người dùng hoặc bất kỳ ai truy cập trang web như: DB_DATABASE, DB_USERNAME, DB_PASSWORD và những người khác 😰.
-
-Và có nhiều laravelos quên thay đổi biến APP_DEBUG thành false. Bạn có thể kiểm tra nó trên Google:
+Và có nhiều dev quên thay đổi biến `APP_DEBUG` thành false. Bạn có thể kiểm tra nó trên Google:
 
 ![](https://i1.wp.com/www.laraveltip.com/wp-content/uploads/2020/04/Captura-de-Pantalla-2020-04-16-a-las-12.17.55.png?resize=1024%2C603&ssl=1)
 
-Hình ảnh Google này khá đáng sợ phải không? Như bạn có thể nhận thấy, điều này dẫn đến rủi ro bảo mật rất lớn vì trang web có thể bị tấn công.
+Hình ảnh Google này khá đáng sợ phải không? Bạn thấy web của mình chứ? :D
 
-Một ví dụ khác là, có biến trong APP_DEBUG được đặt thành true, Rất tiếc được hiển thị với tất cả các giá trị từ file .env.
+Như bạn có thể nhận thấy, điều này dẫn đến rủi ro bảo mật rất lớn vì trang web có thể bị tấn công.
+
+Một ví dụ khác là, biến `APP_DEBUG` được đặt thành true, Rất tiếc được hiển thị với tất cả các giá trị từ file `.env`.
 
 ![](https://i0.wp.com/www.laraveltip.com/wp-content/uploads/2020/04/Captura-de-Pantalla-2020-04-16-a-las-12.21.46.png?resize=880%2C394&ssl=1)
 
@@ -22,42 +22,44 @@ Có thể thấy rằng tất cả các thông tin đều bị lộ, ngay cả c
 
 ## Giải pháp
 
-Chúng tôi có một số giải pháp để ngăn điều này xảy ra.
+Chúng ta có một số giải pháp để ngăn điều này xảy ra.
 
-Điều đầu tiên và rõ ràng nhất là chúng ta phải luôn nhớ đặt APP_DEBUG thành false.
-Nhưng nếu vì lý do nào đó mà chúng tôi quên thực hiện bước này trong triển khai, chúng tôi có một công cụ mà nhiều nhà phát triển đã bỏ qua và được gọi là debug_blacklist.
+Điều đầu tiên và rõ ràng nhất là chúng ta phải luôn nhớ đặt `APP_DEBUG` thành `false`.
+Nhưng nếu vì lý do nào đó mà chúng ta quên thực hiện bước này trong khi triển khai dự án, chúng ta có một công cụ mà nhiều dev đã bỏ qua và được gọi là `debug_blacklist`.
 
-Che dấu các biến môi trường với danh sách đen Gỡ lỗi
+## Che dấu các biến môi trường với Debug blacklist
 
-Nó là một mảng được tạo thành từ 3 phím
+Nó là một mảng được tạo thành từ 3 key:
 
-_ENV: các biến được hiển thị trong Biến môi trường
+- _ENV: các biến được hiển thị trong Enviroment Variables
 
-_SERVER: các biến được hiển thị trong Dữ liệu Máy chủ / Yêu cầu
+- _SERVER: các biến được hiển thị trong Server/Request Data
 
-_POST: các biến được gửi qua phương thức này
+- _POST: các biến được gửi qua phương thức này
 
-Chúng ta sẽ làm một ví dụ về cách cấu hình của mảng đã nói trong file config / app.php. Các biến sẽ bị ẩn: APP_KEY, DB_DATABASE, DB_USERNAME, DB_PASSWORD, cả trong khóa _ENV và trong _SERVER.
+Chúng ta sẽ làm một ví dụ về cách cấu hình của mảng đã nói trong file `config/app.php`. Các biến sẽ bị ẩn: `APP_KEY`, `DB_DATABASE`, `DB_USERNAME`, `DB_PASSWORD`, cả trong key `_ENV` và `_SERVER`.
 
 ![](https://i1.wp.com/www.laraveltip.com/wp-content/uploads/2020/04/Captura-de-Pantalla-2020-04-16-a-las-13.00.06.png?resize=638%2C1024&ssl=1)
 
-Bây giờ chúng tôi kiểm tra lại trên trang hiển thị lỗi.
+Bây giờ chúng ta kiểm tra lại trên trang hiển thị lỗi.
 
 ![](https://i2.wp.com/www.laraveltip.com/wp-content/uploads/2020/04/Captura-de-Pantalla-2020-04-16-a-las-13.04.26.png?resize=1024%2C493&ssl=1)
 
-Chúng ta có thể thấy giá trị của các biến này hiện được thay thế bằng **** như thế nào, nếu là trường hợp của DB_PASSWORD, ví dụ này trống thì nó hiển thị “” nhưng vì nó không được bao gồm trong mảng, nên sẽ hiển thị
+Chúng ta có thể thấy giá trị của các biến này hiện được thay thế bằng **** như thế nào, nếu là trường hợp của `DB_PASSWORD`, ví dụ này trống thì nó hiển thị “” nhưng vì nó không được bao gồm trong mảng, nên sẽ hiển thị ra ngoài.
+
+Bạn có thể tham khảo thêm giải pháp này tại Laravel doc: https://laravel.com/docs/5.7/configuration#hiding-environment-variables-from-debug
 
 ## Giải pháp khác
 
-Một giải pháp khác là chúng tôi cấp 400 hoặc 440 quyền đối với file .env với CHMOD để người dùng công khai không thể truy cập.
+Một giải pháp khác là chúng ta cấp quyền 400 hoặc 404 đối với file `.env` khi CHMOD để người dùng bình thường không thể truy cập.
 
 ## Kết luận
 
-Sử dụng debug_blacklist giúp chúng tôi bảo vệ thông tin của các biến môi trường của các dự án đang trong quá trình sản xuất và tình cờ APP_DEBUG được để đúng, chúng tôi có thể thêm bất kỳ biến nào xuất hiện trên màn hình lỗi và những biến này sẽ bị ẩn đi giống như biến hiển thị ở trên.
+Sử dụng `debug_blacklist` giúp chúng ta bảo vệ thông tin của các biến môi trường trong các dự án đang trong quá trình phát triển và tình cờ `APP_DEBUG` được để true, chúng ta có thể thêm bất kỳ biến nào xuất hiện trên màn hình lỗi và những biến này sẽ bị ẩn đi giống như các biến hiển thị ở bên trên.
 
-Thông tin về cấu hình này bắt đầu xuất hiện trong tài liệu dành cho Laravel 5.7, nhưng các thử nghiệm đã được thực hiện với một dự án trong phiên bản Laravel 5.5 và nó hoạt động mà không gặp vấn đề gì.
+Thông tin về cấu hình này bắt đầu xuất hiện trong document của Laravel 5.7, nhưng việc thử nghiệm chức năng này đã được thực hiện với một dự án trong phiên bản Laravel 5.5 và nó hoạt động mà không gặp vấn đề gì.
 
-Đừng quên cảm ơn Juan Cuartas vì bài viết thú vị của anh ấy và nếu bạn cũng muốn viết về một chủ đề thú vị và đã được đăng trên Laravel Tip, thì hãy gửi cho tôi theo địa chỉ laraveltip@gmail.com.
+Hy vọng bài viết này sẽ giúp ích cho các bạn thêm 1 kinh nghiệm nhỏ trong quá trình phát triển dự án. Cảm ơn vì đã đọc bài!
 
 ## Tham khảo
 https://www.laraveltip.com/cuidado-con-tu-avides-hacer-esto/
