--- a/viblo-202010.md
+++ b/viblo-202010.md
@@ -14,9 +14,10 @@ Hình ảnh Google này khá đáng sợ phải không? Bạn thấy web của m
 
 Như bạn có thể nhận thấy, điều này dẫn đến rủi ro bảo mật rất lớn vì trang web có thể bị tấn công.
 
-Một ví dụ khác là, biến `APP_DEBUG` được đặt thành true, Rất tiếc được hiển thị với tất cả các giá trị từ file `.env`.
+Một ví dụ khác là, biến `APP_DEBUG` được đặt thành true sẽ hiển thị tất cả các giá trị từ file `.env`.
 
-![](https://i0.wp.com/www.laraveltip.com/wp-content/uploads/2020/04/Captura-de-Pantalla-2020-04-16-a-las-12.21.46.png?resize=880%2C394&ssl=1)
+Ví dụ như thế này:
+![](https://github.com/mrduong92/Cordova/blob/master/Screenshot%20from%202020-10-21%2009-17-38.png)
 
 Có thể thấy rằng tất cả các thông tin đều bị lộ, ngay cả cấu trúc nơi lưu trữ dự án, tất nhiên có nhiều biến số nữa bị lộ.
 
