--- a/viblo-202011.md
+++ b/viblo-202011.md
@@ -83,7 +83,7 @@ function readFile($file)
 }
 
 $file = fopen('products.csv', 'r');
-$productNoFree = leerArchivo($file);
+$productNoFree = readFile($file);
 fclose($file);
 
 if ($productNoFree) {
@@ -112,7 +112,7 @@ function readFile($file)
 }
 
 $file = fopen('products.csv', 'r');
-$productNoFree = leerArchivo($file);
+$productNoFree = readFile($file);
 fclose($file);
 
 if ($productNoFree) {
